--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
   <script type="text/javascript" src="app1.js"></script>
 
+
+  <div class="tooltip n" style="position: absolute; top: 240.422px; opacity: 0;
+   pointer-events: none; box-sizing: border-box; left: 848.741px;">
+   KS
+   <br>Poverty: 13.6
+   <br>Healthcare: 14.5
+  </div>
 </body>
 
 </html>
